# mhrsb-qurious-crafting-ocr-app

./: .gitignore  README.md
src/: main.py  pyproject.toml
src/assets/: all_skills.json
src/components/: detail_dialog.py  linked_sentence.py  load_settings_dialog_base.py  save_settings_dialog.py  settings_edit_dialog.py  settings_run_ocr_dialog.py
src/constants/: paths.py  routes.py  skills.py  storage_keys.py  urls.py
src/services/: file_service.py
src/storage/: settings.json
src/views/: home_view.py  not_found_view.py  ocr_view.py  router.py  settings_view.py  skill_settings_view.py  skill_stats_view.py
